--- a/details.html
+++ b/details.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-<!--comentario-->
+<!--comentarioasd-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Major Guidance Solutions is a training and web-consulting company.  We build websites, custom solutions, and training courses" />
         <title>Major Guidance Solutions - Sample Website for Training Courses</title>
